# applywright

./: .gitignore  CLAUDE.md  LICENSE  README.md  SETUP-WITH-AI.md  bootstrap.py  pyproject.toml  setup.sh
.claude/: settings.json
profile.example/: answers-field-notes.md  config.yaml  cover-letter-field-notes.md  cv-rules.md  cv.md  master-bullets.md  persona.md  voice-bank.md
profile.example/skills/: README.md
scripts/: doctor.py  doctor.sh  export-pdf.py  export-pdf.sh  fetch-jd.py  fetch-jd.sh  inbox.py  log-append.py  open.py  postprocess-typst.py  scan-injection.py  strip-images-for-pdf.py  tracker.py  write-jd.py
skills/application-answers/: SKILL.md
skills/assess-fit/: SKILL.md
skills/build-resume-template/: SKILL.md  typst-cookbook.md
skills/build-story-bank/: SKILL.md
skills/bulk-process/: SKILL.md
skills/collect-jobs/: SKILL.md
skills/company-research/: SKILL.md
skills/cover-letter/: SKILL.md
skills/customize/: SKILL.md
skills/customize-pipeline/: SKILL.md
skills/fetch-jd/: SKILL.md
skills/orientation/: SKILL.md
skills/process-job/: SKILL.md
skills/refresh-persona/: SKILL.md
skills/shared/: drafting-protocol.md  editing-intent.md  rating-and-learning.md  voice-bank.md  writing-rules.md
src/applywright/: __init__.py  bootstrap.py  check_template.py  cli.py  doctor.py  export_pdf.py  fetch.py  inbox.py  log_append.py  log_start.py  opener.py  paths.py  postprocess.py  reset_intake.py  scan.py  strip_images.py  tracker.py  write_jd.py
templates/: cover-letter.typ  cv.typ  document.typ
